<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity" >

 
        
      <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical" >

       
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip" >

        <TextView
            android:id="@+id/SourceNameCaption"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/SourceNameCaption"
            android:textSize="14dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextSourceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dip"
            android:ems="10" 
            android:hint="消防水源">

            <requestFocus />
        </EditText>
        
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip" >

        <TextView
            android:id="@+id/LongtitudeCaption"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/LongtitudeCaption"
            android:textSize="14dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />
		<EditText
            android:id="@+id/editTextLontitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dip"
            android:ems="10" >
            <requestFocus />
        </EditText>
        
         <TextView
            android:id="@+id/LatitudeCaption"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/LatitudeCaption"
            android:textSize="14dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dip"
            android:ems="10" >

            <requestFocus />
        </EditText>

            
        
    </LinearLayout>
 <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip" >

        <TextView
            android:id="@+id/SourceTypeCaption"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/SourceTypeCaption"
            android:textSize="14dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />
      <Spinner
            android:id="@+id/spinnerSourceType"
            android:textSize="14dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        
    </LinearLayout>
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip" 
        >

       <TextView
           android:id="@+id/SourceDescriptionCaption"
           android:layout_width="80dip"
           android:layout_height="wrap_content"
           android:textAppearance="?android:attr/textAppearanceSmall"
           android:textSize="14dip"
           android:text="@string/SourceDescriptionCaption" />
<Spinner
            android:id="@+id/spinnerSourceDescription"
            android:textSize="14dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip" >

        <TextView
            android:id="@+id/SourcePressureCaption"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/SourcePressureCaption"
            android:textSize="14dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />

<Spinner
            android:id="@+id/spinnerSourcePressure"
            android:textSize="14dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip" >

        <TextView
            android:id="@+id/PipeRadiusCaption"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/PipeRadiusCaption"
            android:textSize="14dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/SpinnerSourceDiameter"
            android:textSize="14dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        
    </LinearLayout>
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip" >

        <TextView
            android:id="@+id/ContactCaption"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/ContactCaption"
            android:textSize="14dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextContact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dip"
            android:ems="10" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip" >

        <TextView
            android:id="@+id/ContactTelCaption"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/ContactTelCaption"
            android:textSize="14dip" 
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextContactTel"
            android:textSize="14dip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" android:inputType="phone"
            android:ems="10" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>
       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip" >

        <TextView
            android:id="@+id/UpdateDateCaption"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/UpdateDateCaption"
            android:textSize="14dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/editTextUpdateDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14dip"
            android:ems="10"  android:editable="false" >

            <requestFocus />
        </EditText>
        
    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dip" >

        <TextView
            android:id="@+id/SelectPictureCaption"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:text="@string/SelectPictureCaption"
            android:textSize="14dip"
            android:textAppearance="?android:attr/textAppearanceSmall" />
 <TextView
            android:id="@+id/SelectPictureFileName"
            android:textSize="14dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />


        
    </LinearLayout>
     <LinearLayout
        android:layout_width="160dip"
        android:layout_height="120dip"
         android:layout_gravity="bottom|center_horizontal"
         >

         <ImageView
             android:id="@+id/imageViewImageFile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true"
             
             android:src="@drawable/icon_addphoto" />

  </LinearLayout>



     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
         android:layout_gravity="bottom|center_horizontal"
         >

         <LinearLayout
            
             android:layout_height="match_parent"
             android:layout_width="match_parent" 
             android:orientation="horizontal"
             
             >
            <Button
            android:id="@+id/btnUpload"
           android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnUpload" 
            android:layout_weight="1"
            />
         

         <Button
             android:id="@+id/buttonSync"
            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/upload" 
             android:layout_weight="1"
             />
		<Button
            android:id="@+id/btnReturn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnReturn"
            android:layout_weight="1"
             />
         </LinearLayout>

       
    </LinearLayout>
  </LinearLayout>   


 
</LinearLayout>